Uploaded To Github

--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 %Comment out for submission
 \cogscifinalcopy
 
-\title{Rapid Presentation Rate Negatively Impacts Free Recall Performance (Something about no Backwards Contiguity)}
+\title{Rapid Presentation Rates Negatively Impacts the Contiguity Effect In Free Recall}
  
 \author{{\large \bf Claudio Toro-Serey (ctoro@bu.edu), Ian M. Bright (imbright@bu.edu), and Marc W. Howard (marc777@bu.edu)} \\
   Department of Psychological and Brain Sciences, 64 Cummington Mall\\
@@ -84,8 +84,8 @@ As shown in Figure~\ref{Descriptives}, the total number of words recalled decrea
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width = .23\textwidth]{RSVPFR/recall_boxplot.pdf}
-\includegraphics[width = .23\textwidth]{RSVPFR/rt_boxplot.pdf}
+\includegraphics[width = .23\textwidth]{Images/recall_boxplot.pdf}
+\includegraphics[width = .23\textwidth]{Images/rt_boxplot.pdf}
 \end{center}
 \caption{Left: Mean number of valid words recalled per trial across participants and presentation rates. The average number of recalled words decreased as presentation rate increased. Right: Median latencies (ms) across trials for each participant and presentation rate. Median latencies between valid recalls decreased as presentation rate increased} 
 \label{Descriptives}
@@ -96,7 +96,7 @@ As shown in Figure~\ref{Descriptives}, the total number of words recalled decrea
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width = .4\textwidth]{SPC_adjusted.pdf}
+\includegraphics[width = .4\textwidth]{Images/SPC_adjusted.pdf}
 \end{center}
 \caption{Probability of recall as a function of position in study list. Participants showed the highest level of performance for items at the beginning and end of the list. As presentation rate increased, participants showed a tendency to have a lower recency effect in comparison to the primacy effect} 
 \label{SPC}
@@ -108,7 +108,7 @@ These results are in agreement with those from Davelaar et al. (2005), and show 
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width = .4\textwidth]{PFR_adjusted.pdf}
+\includegraphics[width = .4\textwidth]{Images/PFR_adjusted.pdf}
 \end{center}
 \caption{Probability of first recall. Participants tended to begin recall by naming an item from the beginning or end of the list. At lower presentation rates, participants showed a tendency to start recall at the end of the list rather than the beginning, but this tendency flipped for high presentation rates.} 
 \label{PFR}
@@ -122,7 +122,7 @@ Primacy and recency can be a confound in looking at the contiguity effect. There
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width = .4\textwidth]{CRP_unadjusted.pdf}
+\includegraphics[width = .4\textwidth]{Images/CRP_unadjusted.pdf}
 \end{center}
 \caption{Lag CRP for all presentation rates. Contiguity effect visibly diminishes as presentation rate increases.} 
 \label{uCRP}
@@ -130,7 +130,7 @@ Primacy and recency can be a confound in looking at the contiguity effect. There
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width = .4\textwidth]{CRP_adjusted.pdf}
+\includegraphics[width = .4\textwidth]{Images/CRP_adjusted.pdf}
 \end{center}
 \caption{Lag CRP adjusted for primacy and recency effects. As presentation rates increase, the contiguity effect weakens but remains asymmetric.} 
 \label{CRP}
